@@ -1,3 +1,7 @@
+2006-08-23 15:40  lmacken
+
+	* modifyrepo.py, bin/modifyrepo: Initial import
+
 2006-08-11 16:03  pnasrat
 
 	* createrepo.spec: update date
